create additional models for articles associations and make index view work

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <% @articles.each do |category, articles| %>
-  <h3><%= category %></h3>
+  <h3><%= category.category_name %></h3>
   <ul>
     <% articles.each do |article| %>
       <li><a href="<%= article.url %>"><%= article.title %></a></li>
